add get one class
